package thuchanh.stratery.cc3;

import java.util.ArrayList;

public interface IHinhThucKhienMai {
  float apDungKhienMai(ArrayList<MatHang> list);
}
