package thuchanh.stratery.cc3;

import java.util.ArrayList;

public interface IHinhThucThanhToan {
  float phuongThucThanhtoan(ArrayList<MatHang> list);
}
